--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -12,7 +12,7 @@
 			<h2 class="login-h2 text-greensea">Login</h2>
 			<form name="form" class="form-validation mt-20" novalidate ng-controller="LoginCtrl">
 				<div class="form-group">
-					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.username" required>
+					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.username" autocomplete="off" required>
 				</div>
 
 				<div class="form-group">
