--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -158,7 +158,7 @@
 															<!--</span>-->
 
 															<input type="file" accept="image/*" file-model = "myFile" id="profilePicAddUpdate" name="fileupload" style="display: none" onchange="HandleInputTypeFilechange();"/>
-															<input type="text" class="form-control " required id="profilePicFileName" readonly="true"/>
+															<input type="text" class="form-control " id="profilePicFileName" readonly="true"/>
 															<!--<input type="button" value="Click to select file" id="fakeBrowse" onclick="HandleBrowseClick();"/>-->
 															<span class="group-span-filestyle input-group-btn" tabindex="0" id="fakeBrowse" ng-click="HandleProfilePicAddUpdateClick();">
 															<label for="profilep-2" class="btn btn-default ">
