--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -106,7 +106,7 @@
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Account Number/ICCID</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_account_no" maxlength="10" placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_account_no" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)||event.charCode == 8" maxlength="16" placeholder="">
 									</div>
 								</div>
 								<div class="row">
@@ -123,7 +123,7 @@
 									
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Phone Number</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^(?:(?:\+|0{0,2})91(\s*[\-]\s*)?|[0]?)?[789]\d{9}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^(?:\+|00|011)[. ()-]*(?:\d[. ()-]*){11,12}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id</label>
