--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -124,7 +124,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">&nbsp;</label>
 														<select class="form-control" ng-hide="device.device_type=='master'" ng-model="device.device_master_id" ng-options="item.device_id as item.device_name for item in deviceList">
-															<option>Select Primary Device</option>
+															<option value="">Select Primary Device</option>
 														</select>
 													</div>
 												</div>
