--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -72,7 +72,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Account Number/ICCID</label>
-														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)||event.charCode == 8" maxlength="16" placeholder="">
+														<input type="text" name="" id="" ng-model="device.account_no" class="form-control" number maxlength="16" placeholder="">
 													</div>
 												</div>
 												<div class="row">
