--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -151,10 +151,10 @@
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Time Zone</label>
+												<label for="">Time Zone </label>
 												<!-- <input type="text" class="form-control" ng-model="facility.facility_timezone"> -->
 												<select class="form-control" ng-model="facility.facility_timezone">
-													<option selected>USA (Alaska )</option>
+													<option>USA (Alaska)</option>
 													<option>USA (Samoa)</option>
 													<option>USA (Pacific)</option>
 													<option>USA (Eastern)</option>
